# xenRAG

./: .env.example  .gitignore  README.md  cli.py  docker-compose.yml  pyproject.toml
scripts/: clear_stores.py  ingest.py
src/xenrag/config/: settings.py
src/xenrag/graph/: graph.py  state.py  visualize_graph.py
src/xenrag/graph/nodes/: clarification.py  explanation.py  generate_answer.py  guardrails.py  interpreter.py  query.py  reasoning.py
src/xenrag/guardrails/: input_rail.py  output_rail.py  retrieval_rail.py  topic_rail.py
src/xenrag/ingestion/: enricher.py  entity_extractor.py  normalizer.py  pipeline.py  segmenter.py
src/xenrag/llm/: base.py  gemini_client.py  langchain_wrapper.py  load_balancer.py  manager.py  ollama_client.py
src/xenrag/retrieval/: embedding.py  engine.py  interfaces.py  types.py
src/xenrag/retrieval/stores/: neo4j.py  qdrant.py
src/xenrag/tests/: test_topic_validation.py
src/xenrag/utils/: json_parser.py
